# AVAP-ISA

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  opcodes.json  pyproject.toml
docs/: commands-reference.json  language-spec.md
docs/ADR/: ADR-001-three-crate-workspace.md  ADR-002-isa-external-plugin.md  ADR-003-opcodes-json-single-source-of-truth.md  ADR-004-dual-bytecode-storage.md  ADR-005-compiler-in-definition-server.md  ADR-006-marker-based-conector-routing.md  ADR-007-maturin-build-docker-pattern.md  ADR-008-short-circuit-boolean-evaluation.md  ADR-009-isinstance-to-is-instance-opcode.md  ROADMAP.md
docs/PRD/: PRD-001-platon-vm-kernel-avap-isa-v2.md
python/avap_isa/: __init__.py
python/avap_isa/libavap_isa.dylib.dSYM/Contents/: Info.plist
python/avap_isa/libavap_isa.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libavap_isa.dylib.yml
src/: lib.rs
tests/: integration.rs
