[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "avap-isa"
version = "0.1.0"
description = "AVAP instruction set for the Platon kernel"
requires-python = ">=3.11"
dependencies = ["platon>=0.3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "maturin>=1.5"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
